--- a/django_celery_example/templates/base.html
+++ b/django_celery_example/templates/base.html
@@ -27,7 +27,14 @@
   {% block content %}{% endblock %}
 </div>
 
-{% block footer %}{% endblock %}
+{% block footer %}
+    <br>
+    <div>
+      <a target="_blank" href="https://github.com/jessamynsmith/django-celery-example">Source code</a> here.
+        <br>
+        Like my work? Tip me! <a target="_blank" href="https://www.paypal.me/jessamynsmith">https://www.paypal.me/jessamynsmith</a>
+    </div>
+{% endblock %}
 
 {% block extra_js %}{% endblock %}
 
